wad of random stuff yay.

--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -16,6 +16,7 @@ Rooms:
 </br>
 
 Youtube account:  {{client.youtube_id}}</br>
+Youtube playlist ID:  {{show.youtube_playlist_id}}</br>
 Archive.org account:  {{client.archive_id}}</br>
 </br>
 
