--- a/dj/main/templates/raw_set.html
+++ b/dj/main/templates/raw_set.html
@@ -60,7 +60,7 @@ trash:{{trash}}
 </tr> 
 
 </table>
-<img src="{{MEDIA_URL}}/{{raw_file.show.client.slug}}/{{raw_file.show.slug}}/audio_png/dv/{{raw_file.location.slug}}/{{raw_file.basename}}_audio.png"> 
+<img src="{{MEDIA_URL}}/{{raw_file.show.client.slug}}/{{raw_file.show.slug}}/dv/{{raw_file.location.slug}}/{{raw_file.basename}}.wav.png"> 
 
   {% endfor %}
 
