--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -53,6 +53,7 @@
     <td>
         <a href="{% url "admin:main_raw_file_changelist" %}?show__id__exact={{show.id}}">raw_File admin</a>
         <a href="{% url "admin:main_mark_changelist" %}?show__id__exact={{show.id}}">mark admin</a>
+        <a href="{% url "admin:main_location_changelist" %}?show__id__exact={{show.id}}">location admin</a>
     </td>
     <td> </td>
     <td> 
