--- a/dj/main/templates/episode_logs.html
+++ b/dj/main/templates/episode_logs.html
@@ -9,9 +9,10 @@
 
 {{episode.name}} 
 <table border=1>
-    <tr><th>State</th><th>Ready</th><th>Start</th><th>End</th><th>Durration</th><th>Result</th></tr>
+    <tr><th>id</th><th>State</th><th>Ready</th><th>Start</th><th>End</th><th>Durration</th><th>Result</th></tr>
 {% for log in logs %}
   <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
+      <td>{{log.id}}</td>
       <td>{{log.state.slug}}</td>
       <td>{{log.ready}}</td>
       <td>{{log.start}}</td><td>{{log.end}}</td>
