--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -35,6 +35,13 @@ Title slide: {{client.title_svg}}
 Credits: {{client.credits}}
 </br>
 </br>
+Description: </br>
+{{show.description}}
+{{client.description}}
+</br>
+{{show.tags}}
+{{client.tags}}
+</br>
 </br>
 
 {% endblock %}
