--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -16,7 +16,7 @@ Rooms:
 </br>
 
 Youtube account:  {{client.youtube_id}}</br>
-Youtube playlist ID:  {{show.youtube_playlist_id}}</br>
+Youtube playlist ID: <a href="https://www.youtube.com/playlist?list={{show.youtube_playlist_id}}">{{show.youtube_playlist_id}}</a></br>
 Archive.org account:  {{client.archive_id}}</br>
 </br>
 
