--- a/dj/main/templates/show_parameters.html
+++ b/dj/main/templates/show_parameters.html
@@ -29,7 +29,7 @@ Item Count: {{episodes.count}} <br>
 <br>
 
 Title slide: {{client.title_svg}}
-<a href="{% url "pdfs" 'title_slides' show.id %}">title slides</a>
+<a href="{% url 'title_slides' show.id %}">title slides</a>
 </br>
 
 Credits: {{client.credits}}
