--- a/dj/main/templates/show_shortcuts.html
+++ b/dj/main/templates/show_shortcuts.html
@@ -2,11 +2,11 @@
 <a href="{% url "show_stats" show.id %}" title="{{show.name}} status grid">status grid</a>
 <a href="{% url "processes" show.id %}" >processes</a>
 <a href="{% url "show_pipeline" show.id %}" title="{{show.name}} pipeline">pipeline</a>
-</td>  
+</td>
 <td><a href="{% url "pdfs" 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a>
 <a href="{% url "pdfs" 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf?day={{now|date:"d"}}">today's</a>
 <a href="{% url "pdfs" 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf?day={{now|date:"d"|add:"1"}}">t+1</a>
 </td>
-<td><a href="{% url "schedule" show.id show.slug %}">schedule</a></td> 
-<td><a href="{% url "pdfs" 'title_slides' show.id %}">title slides</a></td>
+<td><a href="{% url "schedule" show.id show.slug %}">schedule</a></td>
+<td><a href="{% url 'title_slides' show.id %}">title slides</a></td>
 <td><a href="{% url "show_anomalies" show.id %}" title="{{show.name}}">anomalies</a></td>
