--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -33,7 +33,7 @@ Episode Count: {{episodes.count}}
         <th title="1:Edit">state</th>
         <th>episode.name</th>
         <th>episode.authors</th>
-        <th title="email"><a href="?emails=1">e</a></th>
+        <th title="email"><a href="?emails=1">e/r</a></th>
         <th title="comment size"><a href="?comment=1">cmt</a></th>
         <th title="Released"><a href="?released=1">rel</a></th>
         <th title="Image Count (sheets)"><a href="?images=1">img</a></th>
@@ -61,7 +61,7 @@ Episode Count: {{episodes.count}}
         <td>{{episode.state}}{{episode.locked|yesno:"*, "}}</td>
         <td style="white-space:normal"><a href="E/{{episode.id}}/{% if episode.state == 1 %}#ep-sm{% endif %}">{{ episode.name }}</a></td>
         <td style="white-space:normal">{{episode.authors}}</td>
-        <td>{{episode.emails|yesno:"y,"}}</td>
+        <td>{{episode.emails|yesno:"y,"}}{{episode.reviewers|yesno:"/y,"}}</td>
         <td style="white-space:normal"><a href="E/{{episode.id}}/#id_comment" title="{{episode.comment}}">{{episode.comment|length|default:""}}</a></td>
         <td>{{episode.released|yesno:"Y,N"}}</td>
         <td>{{episode.image_file_set.count|default:""}}</td>
