--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -54,6 +54,7 @@
         <a href="{% url "admin:main_raw_file_changelist" %}?show__id__exact={{show.id}}">raw_File admin</a>
         <a href="{% url "admin:main_mark_changelist" %}?show__id__exact={{show.id}}">mark admin</a>
         <a href="{% url "admin:main_location_changelist" %}?show__id__exact={{show.id}}">location admin</a>
+        <a href="{% url "admin:main_image_file_changelist" %}?show__id__exact={{show.id}}">Image File admin</a>
     </td>
     <td>
         <a href="{% url "mk_episode" show.id %}">mk_episode</a>
